init forward pass and loss function discussion

--- a/ch2_nn_math/backprop_atomic_ops.ipynb
+++ b/ch2_nn_math/backprop_atomic_ops.ipynb
@@ -31,6 +31,30 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "array([1., 1.])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a1 = [0, 0]\n",
+    "a2 = [1, 1]\n",
+    "a3 = [2, 2]\n",
+    "\n",
+    "np.mean(np.vstack((a1, a2, a3)), axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
