removed tex error from empty begin equation

--- a/ch2_nn_math/tex/explanation.tex
+++ b/ch2_nn_math/tex/explanation.tex
@@ -245,7 +245,7 @@ that the MLP makes. Again, the MLP can be written as a function $h$ of an
 input vector $x$ with parameters $W$ and $b$.
 
 \begin{equation}
-
+	\phi
 \end{equation}
 
 \begin{equation}
