--- a/ch2_nn_math/tex/sources.bib
+++ b/ch2_nn_math/tex/sources.bib
@@ -43,3 +43,17 @@
   howpublished = {Mathematics Stack Exchange},
   url          = {https://math.stackexchange.com/q/3562026}
 }
+
+@inproceedings{Glorot2010,
+  author    = {Xavier Glorot and Yoshua Bengio},
+  city      = {Chia Laguna Resort, Sardinia, Italy},
+  editor    = {Yee Whye Teh and Mike Titterington},
+  journal   = {Proceedings of the Thirteenth International Conference on Artificial Intelligence and Statistics},
+  month     = {12},
+  pages     = {249-256},
+  publisher = {PMLR},
+  title     = {Understanding the Difficulty of Training Deep Feedforward Neural Networks},
+  volume    = {9},
+  url       = {https://proceedings.mlr.press/v9/glorot10a.html},
+  year      = {2010}
+}
