--- a/ch2_nn_math/tex/sources.bib
+++ b/ch2_nn_math/tex/sources.bib
@@ -57,3 +57,17 @@
   url       = {https://proceedings.mlr.press/v9/glorot10a.html},
   year      = {2010}
 }
+
+@misc{MathSEDerivSigmoid2019,
+  title        = {Derivative of Binary Cross Entropy - why are my signs not right?},
+  author       = {Giang Tran (https://math.stackexchange.com/users/615951/giang-tran)},
+  howpublished = {Mathematics Stack Exchange},
+  url          = {https://math.stackexchange.com/q/3220477}
+}
+
+@online{WolframMathWorldParameterDefinition,
+  author       = {Weisstein, Eric},
+  title        = {Parameter},
+  organization = {MathWorld--A Wofram Web Resource},
+  url          = {https://mathworld.wolfram.com/Parameter.html}
+}
